# PlayerAndPusher

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_tvchannel.xml  adapter_tv_channel.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml
audio/: CMakeLists.txt  build.gradle
audio/src/androidTest/java/com/zj/audio/: ExampleInstrumentedTest.kt
audio/src/main/: AndroidManifest.xml
audio/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
audio/src/main/java/com/zj/audio/: AuditActivity.java  LiveRecording.java
audio/src/main/java/com/zj/audio/live/: LivePusher.java
audio/src/main/java/com/zj/audio/live/channel/: AudioChannel.java  CameraHelper.java  VideoChannel.java
audio/src/main/res/layout/: activity_audit.xml
audio/src/test/java/com/zj/audio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
play/: CMakeLists.txt  build.gradle
play/src/androidTest/java/com/zj/play/: ExampleInstrumentedTest.kt
play/src/main/: AndroidManifest.xml
play/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  player_jni.cpp  safe_queue.h
play/src/main/java/com/zj/play/: BroadcastLive.java  DNPlayer.java  PlayActivity.java
play/src/main/res/layout/: activity_play.xml
play/src/main/res/layout-land/: activity_play.xml
(+2 files in other folders)
